# PriBET_ResearchWork

./: README.md
SEALExamples/: CMakeCache.txt  CMakeLists.txt  CompareMultipleWithOne_PriBETprotocol_hamming_distance.cpp  CompareTwoNumber_PETprotocol_hamming_distance.cpp  Makefile  Project.cpp  cmake_install.cmake  documentToPolynolomial  privacy_preserving_plagiarism.cpp
SEALExamples/Compare/: CoefficientChecking.h  IntegerToVector.h  VectorToPoly.h  test  test.cpp
SEALExamples/Document/: Coefficient.h  DecimaltoHexaDecimal.h  Document.h  HexaDeciamlToDecimal.h  ManualResult.h  documentToPolynolomial.h  hashing.h  stopwords.h
SEALExamples/Document_BackDated_Version/: DecimaltoHexaDecimal.cpp  HexaDecimalToDecimal  HexaDecimalToDecimal.cpp  Makefile  Manual Result Find of two document  Manual Result Find of two document with hasing  Manual Result Find of two document with hasing.cpp  Manual Result Find of two document.cpp  document to vector  document to vector.cpp  documentToPolynolomial  documentToPolynolomial.cpp  documentToPolynolomial.h  hashing.h  out.txt  out2014.txt  out2016.txt  privacy_preserving_plagiarism.cpp  rafi.cpp  temp code
SEALExamples/Document_BackDated_Version/Document/: DecimaltoHexaDecimal  DecimaltoHexaDecimal.h  Document.txt  Manual Result Find of two document  Manual Result Find of two document with hasing  Manual Result Find of two document with hasing.cpp  Manual Result Find of two document.cpp  hashing.h  (+8 more)
SEALExamples/Project/: AllFunction.h  CoefficientChecking.h  IntegerToVector.h  SealContent.h  VectorToPoly.h  poly_To_Cypher.h
(+14 files in other folders)
